manifests/1password-connect/Deployment-onepassword-connect-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: operator
    app.kubernetes.io/instance: 1password-connect
    app.kubernetes.io/name: connect
  name: onepassword-connect-operator
  namespace: 1password
spec:
  replicas: 1
  selector:
    matchLabels:
      name: onepassword-connect
  template:
    metadata:
      labels:
        app.kubernetes.io/component: operator
        name: onepassword-connect
    spec:
      containers:
        - args:
            - --zap-log-level=info
            - --health-probe-bind-address=:8081
          command:
            - /manager
          image: 1password/onepassword-operator:1.12.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20
          name: onepassword-connect
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
      securityContext:
        fsGroup: 65532
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: onepassword-connect-operator
      tolerations: []
