manifests/1password-connect/Service-onepassword-connect.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: connect
    app.kubernetes.io/instance: 1password-connect
    app.kubernetes.io/name: connect
  name: onepassword-connect
  namespace: 1password
spec:
  ports:
    - name: connect-sync
      port: 8081
    - name: connect-api
      port: 8080
  selector:
    app: onepassword-connect
  type: ClusterIP
