manifests/1password-connect/CiliumNetworkPolicy-allow-connect-operator.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-connect-operator
  namespace: 1password
spec:
  endpointSelector:
    matchLabels:
      app: onepassword-connect
      app.kubernetes.io/component: connect
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/component: operator
            name: onepassword-connect
      toPorts:
        - ports:
            - port: "8080"
