manifests/1password-connect/CiliumNetworkPolicy-allow-kube-apiserver-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kube-apiserver-egress
  namespace: 1password
spec:
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app: onepassword-connect
      app.kubernetes.io/component: connect
