manifests/1password-connect/CiliumNetworkPolicy-allow-world-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-world-egress
  namespace: 1password
spec:
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: operator
      name: onepassword-connect
